--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "styled-components": "5.3.6"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -73,7 +72,6 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "~18.3.1",
     "@types/react-native": "^0.73.0",
-    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "babel-loader": "^8.2.5",
